--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,60 @@
-.DS_Store
-node_modules
-/dist
-
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Build output
+dist/
+!.gitkeep
+
+# Static files cache
+*.cache
+
+# Vue CLI generated files
+public/js/
+public/css/
+public/static/
+
+# Local environment files
+.env.local
+.env.*.local
 
 # Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Test coverage
+coverage/
+
+# Optional npm cache directory
+.npm/
+
+# Debug log files
+*.log
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (if applicable)
+.cache/
+
+# Miscellaneous
+*.bak
+Thumbs.db
+ehthumbs.db
